--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -2,14 +2,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap');
 @import url("https://use.typekit.net/eii1uqx.css");
 
+
+
 :root{
     --pageColor:#3fa6ff;
     --margin:5%;
     --smallerText:20pt;
 }
 
+
 .title{
-    font-family: jaf-lapture, sans-serif;
+/*    font-family: jaf-lapture, sans-serif;*/
+    font-family: 'Lato', sans-serif;
     font-weight: 600;
     font-size:32pt;
     position:relative;
@@ -18,40 +22,64 @@
     margin-bottom:2%;
     color:#384853;
     padding-left:14%;
+
+
 }
 .section{
     font-weight: bold;
     color:black;
 }
+.grid {
+
+    position: static;
+    display: -ms-grid;
+    display: grid;
+    max-width: 1225px;
+    margin-top: 60px;
+    padding-right: 14%;
+    padding-left: 14%;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
+    grid-auto-columns: 1fr;
+    grid-column-gap: 80px;
+    grid-row-gap: 16px;
+    -ms-grid-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: auto;
+    grid-template-rows: auto;
+}
 
 .table{
     color:#344854;
-    font-family: europa, sans-serif;
-/*    text-align: center;*/
-    font-size:14pt;
-/*    margin-left:17%;*/
-    position:relative;
-/*    padding:14%;*/
+    font-family: 'Lato', sans-serif;
+    font-size:18px;
     text-align: left;
-    float:right;
-    top:-10%;
-    width:40%;
     border-spacing: 20px;
-/*    padding-right:14%;*/
+    column-count: 3;
+
+    box-shadow: 0 0px 20px 0 rgba(0,0,0,.05);
+    background-color:#FFF;
+    padding:16px;
+    border-radius: 10px;
+}
+.table td{
+    padding-left: 20%;
 }
 .paragraph{
     color:#344854;
-
-    font-family: europa, sans-serif;
+/*    font-family: europa, sans-serif;*/
+    font-family: 'Lato', sans-serif;
 /*    text-align: center;*/
     font-size:18px;
     line-height: 28px;
     letter-spacing: .5px;
 /*    margin-left:17%;*/
-    position:relative;
-    padding-left:14%;
+/*    position:relative;*/
+/*    padding-left:5%;*/
     text-align: left;
-    width:40%;
+/*    width:40%;*/
 }
 .introImage{
     width:100%;
@@ -61,7 +89,7 @@
     /*margin-top:5%;*/
 }
 .oneliner{
-    font-family: europa, sans-serif;
+    font-family: 'Lato', sans-serif;
     color:#6b7b8a;
     font-size: 25px;
     position:relative;
