--- a/src/pages/groupChat.module.css
+++ b/src/pages/groupChat.module.css
@@ -64,7 +64,8 @@
     margin-top:10%;
     margin-left:14%;
 /*    margin-left:var(--margin);*/
-    font-family: masqualero, sans-serif;
+/*    font-family: masqualero, sans-serif;*/
+    font-family: 'Lato', sans-serif;
     font-weight:700;
     color:#4f4f4f;
 }
@@ -121,33 +122,33 @@
  /*   margin-left:var(--margin);*/
 }
 .Himage{
-    width:100%;
+    width:80%;
     margin:auto;
     position: relative;
     margin-top:8%;
 }
 .HimageS{
-    width:60%;
+    width:50%;
     margin:auto;
     position: relative;
     margin-top:3%;
     margin-bottom:3%;
 }
 .HimageXS{
-    width:40%;
+    width:25%;
     margin:auto;
     position: relative;
 /*    margin-top:3%;*/
     margin-bottom:3%;
 }
 .Vimage{
-    width:40%;
+    width:20%;
     position: relative;
     margin-top:8%;
 }
 .FDVid{
     display:block;
-    width:30%;
+    width:25%;
     margin:auto;
     margin-top:5%;
 
