--- a/src/pages/groupChat.module.css
+++ b/src/pages/groupChat.module.css
@@ -3,17 +3,6 @@
     width:100%;
     /*background-color:pink;*/
 }
-.title{
-    color:var(--pageColor);
-    font-family: masqualero, sans-serif;
-    font-weight: 700;
-    font-style: normal;
-    font-size:30pt;
-    position:relative;
-    text-align: center;
-    margin-top:5%;
-    margin-bottom:2%;
-}
 .info{
     color:black;
     font-family: europa, sans-serif;
@@ -30,15 +19,6 @@
     margin-bottom:10%;
     position: relative;
     /*margin-top:5%;*/
-}
-.oneliner{
-    font-family: europa, sans-serif;
-    text-align: center;
-/*    margin:auto;*/
-    margin-top:5%;
-    color:#463f45;
-    font-size:16pt;
-    font-style:italic;
 }
 .intro{
     color:black;
@@ -65,12 +45,14 @@
     margin-left:14%;
 /*    margin-left:var(--margin);*/
 /*    font-family: masqualero, sans-serif;*/
-    font-family: 'Lato', sans-serif;
+   /* font-family: 'Lato', sans-serif;*/
+    font-family: sans-serif;
     font-weight:700;
     color:#4f4f4f;
 }
 
 .subtitle{
+    font-family: sans-serif;
   /*  margin-top:10%;*/
     font-size:16pt;
     margin-left:17%;
@@ -82,7 +64,8 @@
 }
 .paragraph{
     color:black;
-    font-family: 'Lato', sans-serif;
+   /* font-family: 'Lato', sans-serif;*/
+   font-family: sans-serif;
     font-size:14pt;
     width:60%;
     position:relative;
