--- a/src/pages/GCal.module.css
+++ b/src/pages/GCal.module.css
@@ -1,11 +1,13 @@
+.margin{
+    padding-left:14%;
+    padding-right:14%;
+}
 .intro{
     color:black;
     font-family: 'Lato', sans-serif;
     font-size:14pt;
     width:65%;
     position:relative;
-/*    margin-top:3%;
-    margin-left:5%;*/
     margin:auto;
     line-height:1.5;
     background-color:#F8F8F8;
@@ -18,77 +20,148 @@
     color:#4285f4;
 }
 .Himage{
-    width:70%;
-    margin:auto;
+    width:100%;
     position: relative;
-    margin-top:3%;
-
+    margin-bottom: 32px;
+/*    margin-bottom: 30px;*/
 }
 .HimageS{
-    width:30%;
-    margin:auto;
-    position: relative;
-    margin-top:3%;
-    box-shadow:  5px 5px 20px #a8a8a8;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    width:100%;
+    box-shadow: 0 20px 20px 0 rgba(0,0,0,.1);
+    border-radius: 10px;
+}
+.box{
+    grid-row: 6 / 7;
+/*    grid-column: 9/13;*/
+/*    height: 250px;*/
 
+    display: flex;
+/*    justify-content: center;*/
+    align-items: center;
+    margin-bottom: 30px;
+}
+.gridWrapper{
+  
+    padding-bottom:60px;
+}
+.grid2{
+    position: static;
+    display: -ms-grid;
+    display: grid;
+    max-width: 1225px;
+    /*margin-top: 60px;*/
+/*    padding-right: 14%;
+    padding-left: 14%;*/
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
+    grid-auto-columns: 1fr;
+    grid-column-gap: 50px;
+    grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: auto;
+    grid-template-rows: auto;
 }
 .HimageXS{
-    width:15%;
-    margin:auto;
-    position: relative;
-    margin-top:8%;
+
+    width:20%;
+/*    position: absolute;*/
+    justify-content: center;
+    align-items: center;
 
 }
 .subtitle{
-    font-size:16pt;
-    margin:auto;
-    font-weight:bold;
-    margin-top:5%;
+    font-size: 30px;
+/*    font-weight:bold;*/
     color:#595959;
-    margin-left:14%;
+/*    text-transform: uppercase;*/
+/*    word-spacing: 5px;*/
+    padding-top:60px;
+    padding-bottom:32px;
 }
 
 .section{
     font-size:24pt;
     margin-top:5%;
     text-align: left;
-    margin-left:12%;
     font-family: sans-serif;
 /*    font-family: masqualero, sans-serif;*/
     font-weight:700;
     color:#4f4f4f;
+    text-transform: uppercase;
+    padding:16px;
 }
+
 .paragraph{
-    color:black;
+    color:#344854;
     font-family: 'Lato', sans-serif;
-    font-size:14pt;
-    width:60%;
+    font-size:16px;
+    width:100%;
     position:relative;
-    margin:auto;
-    margin-top:3%;
     line-height:1.5;
+    text-align: left;
+    margin-bottom: 60px;
+    font-size: 18px;
+    line-height: 27px;
+    font-weight: 400;
+    letter-spacing: .5px;
+
+
+}
+
+.grid {
+    position: static;
+    display: -ms-grid;
+    display: grid;
+    max-width: 1225px;
+    margin-top: 60px;
+/*    padding-right: 14%;
+    padding-left: 14%;*/
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
+    grid-auto-columns: 1fr;
+    grid-column-gap: 80px;
+/*    grid-row-gap: 16px;*/
+/*    -ms-grid-columns: 1fr 1fr;*/
+    grid-template-columns: 3fr 1fr;
+    -ms-grid-rows: auto;
+    grid-template-rows: auto;
+
 }
 .a {
-    padding-top:2%;
-    padding-left:22%;
-    width:80%;
+    margin-bottom: 24px;
+    max-width: 1225px;
     font-size:14pt;
     color:#595959;
+    font-size: 17px;
+    line-height: 27px;
+    font-weight: 400;
+    letter-spacing: .5px;
+    margin-top: 20px;
+    list-style-type: square;
+
 }
 .list{
+
     font-family: 'Lato', sans-serif;
     font-size:14pt;
-    width:60%;
+    max-width: 1225px;
     position:relative;
-    margin:auto;
-    margin-top:3%;
     line-height:1.5;
-    color:#4285f4;
+ /*   color:#4285f4;*/
+    color: #384853;
+    font-weight: bold;
+    justify-content: center;
+    align-items: center;
 /*    margin-left:var(--margin);*/
 }
 .illus{
-    width:20%;
-    margin:auto;
-    position: relative;
-    margin-top:8%;
+    width:90%;
+    margin-top:60px;
+/*    margin:auto;*/
+
 }
