--- a/src/pages/about.module.css
+++ b/src/pages/about.module.css
@@ -3,14 +3,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 @import url("https://use.typekit.net/vnv4usw.css");
 
-.hello {
-     /* font-family: 'Lato', sans-serif;*/
-    font-family: juniper-std, sans-serif;
-/*    font-family: masqualero, sans-serif;*/
-    font-weight: 700;
-    position: relative;
-    font-size: 18pt;
-    line-height: auto;
+.name{
+  font-family: 'jaf-lapture';
+  font-size:28pt;
+  padding-top: 5%;
+  padding-left:14%;
 }
 
 .introduction {
