--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -14,35 +14,46 @@
 }
 .name{
   font-family: 'jaf-lapture';
-  text-align:center;
+  text-align:left;
   margin:auto;
   font-size:42pt;
   width:40%;
   padding-top: 10%;
+  padding-bottom: 60px;
 }
 .indexContainer{
     margin: 0;
     padding: 0;
-    background-color: #f7f9fc;
+/*    background-color: #f7f9fc;*/
 }
 
 .intro {
   color: black;
   font-weight: lighter;
   font-family: 'jaf-lapture';
-  position:absolute;
-  top: 480%;
-  left:32%;
+  position:relative;
+/*  top: 480%;*/
+/*  left:32%;*/
   font-size:16pt;
   width:40%;
   line-height: 2;
-
-  /*background-color:pink;*/
-  /*margin-left:10%;*/
   text-align:left;
-margin:auto;
-
+  margin:auto;
 }
+.introSnipet {
+  color: black;
+  font-weight: lighter;
+  font-family: 'jaf-lapture';
+  position:relative;
+/*  top: 480%;*/
+/*  left:32%;*/
+  font-size:12pt;
+  width:100%;
+  line-height: 2;
+  text-align:left;
+  margin-top:24px;
+}
+
 .contact{
     line-height: 2;
     top: 660%;
