--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -19,11 +19,11 @@
     font-size:32pt;
     position:relative;
 /*    margin-left:17%;*/
-    margin-top:5%;
-    margin-bottom:2%;
+    margin-bottom:24px;
   /*  color:#384853;*/
     color:black;
     padding-left:14%;
+    padding-top:140px;
 
 
 }
@@ -51,6 +51,8 @@
     grid-template-columns: 1fr 1fr;
     -ms-grid-rows: auto;
     grid-template-rows: auto;
+    padding-bottom:120px;
+
 
 }
 .role{
