--- a/src/pages/VirtualOffice.module.css
+++ b/src/pages/VirtualOffice.module.css
@@ -70,24 +70,26 @@
     font-weight:bold;
 
 }
-
-
 .subtitle{
-    font-size: 30px;
-    color:#595959;
-    padding-top:60px;
-    padding-bottom:24px;
+    font-size: 36px;
+    color: #384853;
+    padding-top:20px;
+    padding-bottom: 30px;
+    line-height: 60px;
+    font-weight: 400;
 }
 
 .section{
-    font-size:16pt;
-    margin-top:120px;
+    font-size:21px;
+    padding-top:140px;
+    line-height: 20px;
     text-align: left;
     font-family: sans-serif;
 /*    font-family: masqualero, sans-serif;*/
     font-weight:700;
-    color:#4f4f4f;
+    color: #6b7b8a;
     text-transform: uppercase;
+    letter-spacing: 1.5px;
 }
 .paragraph{
     color:#344854;
@@ -125,7 +127,7 @@
     width:100%;
 /*    margin:auto;*/
     position: relative;
-/*    padding-bottom:120px;*/
+    margin-bottom:120px;
 }
 .HimageS{
     width:50%;
