--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -2,6 +2,7 @@
 @import url("https://use.typekit.net/tbu4cqd.css");
 @import url("https://use.typekit.net/lsk0fkh.css");
 
+ 
 /*for subcategories*/
 .title{
   font-family: 'Lato', sans-serif;
@@ -21,6 +22,7 @@
   padding-top: 13%;
   padding-bottom: 60px;
 }
+
 .indexContainer{
     margin: 0;
     padding: 0;
@@ -28,7 +30,7 @@
 }
 
 .intro {
-  color: black;
+  color: $primary-color;
   font-weight: lighter;
   font-family: 'jaf-lapture';
   position:relative;
