--- a/src/pages/about.module.css
+++ b/src/pages/about.module.css
@@ -13,7 +13,7 @@
 .introduction {
     background-color: white;
     box-sizing:border-box;
-    font-size: 12pt; 
+    font-size: 16px; 
     margin-top:20px;
     margin-right: 5%;
     width:65%;
@@ -22,6 +22,7 @@
     font-weight:lighter;
     font-family: 'Lato', sans-serif;
     padding-left:14%;
+    line-height:1.5;
   
 }
 
