--- a/src/pages/featured-styles.module.css
+++ b/src/pages/featured-styles.module.css
@@ -69,12 +69,6 @@
       grid-template-rows: 1fr 1fr ;
       grid-gap: 10px;
 }
-.gridVert{
-      display: grid;
-/*      grid-template-columns: 1fr 1fr ;*/
-      grid-template-rows: 2fr 2fr ;
-      grid-gap: 10px;
-}
 .grid2{
     position: static;
     display: -ms-grid;
@@ -92,6 +86,13 @@
     grid-template-columns: 1fr 1fr;
     -ms-grid-rows: auto;
     grid-template-rows: auto;
+}
+.grid3{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr ;
+    grid-row-gap: 20px;
+    width:100%;
+    margin:auto;
 }
 .HimageXS{
 
@@ -175,6 +176,7 @@
     padding-left:24%;
     font-size:14px;
 }
+
 .desc{
 
     color: #344854;
@@ -298,4 +300,19 @@ ol li:before {
     margin: 0 auto;
     margin-top:5%;
     
+}
+.vidWrapper{
+    margin-top:60px;
+    margin-bottom:60px;
+}
+.fullVid{
+    width:90%;
+    display: block;
+    border-radius:24px;
+}
+.largeVid{
+    width:76%;
+    display: block;
+    border-radius:24px;
+    margin:auto;
 }
