--- a/src/pages/featured-styles.module.css
+++ b/src/pages/featured-styles.module.css
@@ -46,6 +46,11 @@
     box-shadow: 0 20px 20px 0 rgba(0,0,0,.1);
     border-radius: 10px;
 }
+.HimageXS{
+    width:20%;
+    justify-content: center;
+    align-items: center;
+}
 .callout{
     width:100%;
     margin-top:60px;
@@ -94,13 +99,7 @@
     width:100%;
     margin:auto;
 }
-.HimageXS{
 
-    width:20%;
-/*    position: absolute;*/
-    justify-content: center;
-    align-items: center;
-}
 .current{
     width:70%;
 /*    position: absolute;*/
@@ -300,6 +299,11 @@ ol li:before {
     margin: 0 auto;
     margin-top:5%;
     
+}
+.vidXS {
+    width:20%;
+    padding-top:60px;
+    padding-bottom:60px;
 }
 .vidWrapper{
     margin-top:60px;
