--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -10,11 +10,9 @@
   width: 100vw;
   height: 150vh;
   padding-bottom: 1000px;
-  overflow: "hidden",
+  overflow: "hidden";
 
-
-/*  opacity:10%;
-*/}
+}
 
 .title{
   font-family: 'Lato', sans-serif;
@@ -109,8 +107,8 @@
 
 .gridWrapper {
 /*  background-color:blue;*/
-  box-shadow: 0 20px 20px 0 rgba(0,0,0,.03);
-  padding-top:640px;
+/*  box-shadow: 0 20px 20px 0 rgba(0,0,0,.03);*/
+  padding-top:580px;
   height: 100%;
   width:80%;
   display: grid;
