fixed about me page

--- a/src/pages/about.module.css
+++ b/src/pages/about.module.css
@@ -6,8 +6,13 @@
 .name{
   font-family: 'jaf-lapture';
   font-size:28pt;
-  padding-top: 5%;
-  padding-left:14%;
+}
+
+.margin{
+    padding-left:14%;
+    padding-right:14%;
+    padding-bottom: 60px;
+    padding-top: 60px;
 }
 
 .introduction {
@@ -15,24 +20,31 @@
     box-sizing:border-box;
     font-size: 16px; 
     margin-top:20px;
-    margin-right: 5%;
-    width:65%;
+    width:100%;
     line-height: auto;
     /*margin:center;*/
     font-weight:lighter;
     font-family: 'Lato', sans-serif;
-    padding-left:14%;
     line-height:1.5;
-  
 }
 
 .pic{
-    float:right;
-    margin-left:5%;
-    margin-right:5%;
-    background-color:pink;
     width: 400px;
-
+}
+.grid{
+    position: static;
+    display: -ms-grid;
+    display: grid;
+    max-width: 1225px;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
+    grid-auto-columns: 1fr;
+    grid-column-gap: 100px;
+    grid-template-columns: 2fr 1fr;
+    -ms-grid-rows: auto;
+    grid-template-rows: auto;
 }
 /*ipad*/
 @media(max-width: 1024px){
