--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -4,6 +4,10 @@
 
  
 /*for subcategories*/
+.margin{
+  padding-left: 10%;
+  padding-top: 30px;
+}
 .hero{
   position: fixed;
   padding-top:120px;
