--- a/src/components/work.module.css
+++ b/src/components/work.module.css
@@ -2,17 +2,63 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 
+.grid{
+      position: static;
+    display: -ms-grid;
+    display: grid;
+  /*  max-width: 1225px;*/
+    /*margin-top: 60px;*/
+/*    padding-right: 14%;
+    padding-left: 14%;*/
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
+    grid-auto-columns: 1fr;
+    grid-column-gap: 10px;
+    grid-template-columns: 2fr 1fr;
+    -ms-grid-rows: auto;
+    grid-template-rows: auto;
+    padding-left:24px;
+    padding-right:24px;
+    padding-top:24px;
+    width:100%;
+
+
+
+
+}
 .container {
+    padding-bottom:20%;
     position: relative;
     width: 100%;
     height:auto;
     height: 20%;
-    padding-bottom:20%;
+
     backdrop-filter: blur(8px);
  /*   background-color:white;*/
 
 }
+.tag{
+  font-size:14px;
+  padding-left:4px;
+  padding-right:8px;
+  padding-top:8px;
+  padding-bottom:8px;
+  background-color:#f6f7fa80;
+  border-width: 2px;
+  width:auto;
+  border-style: solid;
+  border-radius: 20px;
+  border-color: #6b7b8a80;
+  color:#6b7b8a80;
 
+  display: inline-block;
+  text-align: center;
+  align-self: center;
+
+
+}
 .image {
   opacity: 1;
   display: block;
@@ -26,6 +72,7 @@
 
 
 .middle {
+
   transition: all .2s cubic-bezier(.25,.46,.45,.94);
   position:absolute;
 /*  transform: translate(-50%, -50%);
@@ -35,12 +82,11 @@
 /*  opacity:0;*/
   font-family: 'Lato', sans-serif;
   font-size: 16px;
-  width: 80%;
-  top:88%;
-  padding-left:10%;
-  padding-right:10%;
+  width: 88%;
+/*  top:88%;*/
   text-align: left;
-  width:fixed;
+  height:relative;
+
 
 }
 
@@ -49,19 +95,16 @@
 }
 
 .text {
-  text-align: left;
   line-height: 1;
+  padding-bottom:12px;
   font-weight:bold;
   z-index: 99;
   position: relative;
   color: #384853;
   text-transform: uppercase;
-/*  padding-left:20px;
-  padding-right:20px;*/
   letter-spacing: 2px;
   font-size: 16px;
-  margin-bottom: 10px;
-/*  background-color: black;*/
+/*  margin-bottom: 10px;*/
 }
 .dateText {
   text-transform: uppercase;
