--- a/src/components/work.module.css
+++ b/src/components/work.module.css
@@ -10,34 +10,30 @@
     /*margin-top: 60px;*/
 /*    padding-right: 14%;
     padding-left: 14%;*/
-    -webkit-box-align: stretch;
-    -webkit-align-items: stretch;
-    -ms-flex-align: stretch;
-    align-items: stretch;
+    -webkit-box-align: start;
+    -webkit-align-items: start;
+    -ms-flex-align: start;
+    align-items: start;
     grid-auto-columns: 1fr;
-    grid-column-gap: 10px;
+    grid-column-gap: 5px;
     grid-template-columns: 2fr 1fr;
     -ms-grid-rows: auto;
-    grid-template-rows: auto;
+    grid-template-rows: auto 1fr auto;
     padding-left:24px;
     padding-right:24px;
-    padding-top:24px;
-    width:100%;
-
-
-
-
+    padding-top:32px;
+    padding-bottom:32px;
+    width:88%;
+    margin:0%;
 }
 .container {
-    padding-bottom:20%;
+/*    padding-bottom:48px;*/
     position: relative;
     width: 100%;
-    height:auto;
-    height: 20%;
-
+/*    height:auto;*/
+/*    height: 20%;*/
     backdrop-filter: blur(8px);
- /*   background-color:white;*/
-
+    display: inline-block
 }
 .tag{
   font-size:14px;
@@ -64,10 +60,9 @@
   display: block;
   width: 100%;  
  /* width: 40%; try this if you dont want images to be s*/
-  height: auto;
+/*  height: auto;*/
   transition: .5s ease;
   backface-visibility: hidden;
-
 }
 
 
@@ -75,11 +70,6 @@
 
   transition: all .2s cubic-bezier(.25,.46,.45,.94);
   position:absolute;
-/*  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  this is for the text to be in the middle
-  */
-/*  opacity:0;*/
   font-family: 'Lato', sans-serif;
   font-size: 16px;
   width: 88%;
@@ -96,7 +86,7 @@
 
 .text {
   line-height: 1;
-  padding-bottom:12px;
+  padding-bottom:8px;
   font-weight:bold;
   z-index: 99;
   position: relative;
@@ -104,9 +94,11 @@
   text-transform: uppercase;
   letter-spacing: 2px;
   font-size: 16px;
+  display: inline-block;
 /*  margin-bottom: 10px;*/
 }
 .dateText {
+  display: inline-block;
   text-transform: uppercase;
   color:#6b7b8a;
   font-weight:bold;
