--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -129,7 +129,7 @@
 
   grid-column: 3 / span 2;
   grid-row: third-line / 4;
-  background-color:green;
+  border-radius: 10px;
 }
 .squareWrapper{
 
@@ -140,19 +140,14 @@
   overflow:none;
   position: relative;
   border-radius: 10px;
-/*  transition: all 1s ease-in;
-  transition: all 0.2s ease-out;*/
   transition: all .2s cubic-bezier(.25,.46,.45,.94);
   box-shadow: 0 20px 20px 0 rgba(0,0,0,.03);
   
 }
 .squareWrapper:hover{
-/*   box-shadow: 10px 10px 30px #C8C8C8;*/
-
+  border-radius: 10px;
   box-shadow: 0 20px 20px 0 rgba(0,0,0,.07);
   transform: translate(0px, -20px);
-/*  background-color: black;*/
-
 }
 
 /*ipad*/
