--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -42,6 +42,9 @@
   text-decoration: none;
 }
 
+.link:hover.link{
+  color:#6b7b8a;;
+}
 
 .intro {
   font-weight: lighter;
@@ -89,6 +92,9 @@
   letter-spacing: 1px;
   padding:40px;
   text-decoration: none;
+}
+.intro a:hover{
+  color:#6b7b8a;
 }
 
 .contact a:hover {
