--- a/src/components/sidebar.module.css
+++ b/src/components/sidebar.module.css
@@ -53,8 +53,7 @@ a{
 }
 
 .optionalWork{
-/*    display:none;*/
-/*    visibility: hidden;*/
+    align-self: center;
     font-family: 'Lato', sans-serif;
     font-size:9pt;
     letter-spacing: 2px;
@@ -65,7 +64,11 @@ a{
     color: "black";
     border-bottom: 3px solid black;
 }*/
-span:hover{
+.work  span:hover{
+    color: "black";
+    border-bottom: 3px solid black;
+}
+.optionalWork span:hover{
     color: "black";
     border-bottom: 3px solid black;
 }
