--- a/src/pages/featured-styles.module.css
+++ b/src/pages/featured-styles.module.css
@@ -121,11 +121,12 @@
     border: 2px solid  #bd081c;;
 }
 .descImage{
-    width:70%;
+    width:90%;
 /*    position: absolute;*/
     justify-content: center;
     align-items: center;
     border-radius: 10px;
+    margin:auto;
     margin-top: 60px;
     margin-bottom: 60px;
     box-shadow: 0 20px 20px 0 rgba(0,0,0,.1);
@@ -213,6 +214,11 @@
     -ms-grid-rows: auto;
     grid-template-rows: auto;
 
+}
+h1{
+    font-family: 'Lato', sans-serif;
+    margin-top:48px;
+    margin-bottom:24px;
 }
 
 ol {
@@ -310,4 +316,10 @@ ol li:before {
     display: block;
     border-radius:24px;
     margin:auto;
+}
+.HVid{
+    width:100%;
+    display: block;
+    margin:auto;
+    box-shadow: 0 20px 20px 0 rgba(0,0,0,.1);
 }
