--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -15,6 +15,7 @@
   height: 150vh;
   padding-bottom: 1000px;
   overflow: "hidden";
+  margin:auto;
 
 }
 
@@ -61,18 +62,16 @@
   margin:auto;
 
 }
-.introSnipet {
-  color: black;
-  font-weight: lighter;
-  font-family: 'jaf-lapture';
-  position:relative;
-/*  top: 480%;*/
-/*  left:32%;*/
-  font-size:12pt;
-  width:100%;
-  line-height: 2;
+.experience{
+   text-align:center;
+   font-size:14pt;
+   font-family: 'jaf-lapture';
+
+}
+
+.introWrapper{
   text-align:center;
-  margin-top:24px;
+/*  margin-left:100px;*/
 }
 
 .contact{
@@ -140,7 +139,7 @@
 
   grid-column: 3 / span 2;
   grid-row: third-line / 4;
-  border-radius: 10px;
+  border-radius: 0px;
 }
 .squareWrapper{
 
